@@ -183,3 +183,4 @@
 ./images/red-ball-64.png
 ./images/yellow-ball-64.png
 ./weathermap-cacti-plugin.css
+./convert-to-dsstats.php
